# silver-mcx-mcp-server

./: README.md  pyproject.toml
src/mcp_metal_price/: server.py
src/mcp_silver_price.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
