[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_silver_price"
version = "0.1.0"
authors = [
  { name = "Bhavuk Agrawal", email = "bhavuk@example.com" },
]
description = "An MCP server for silver price from Groww.in"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "selenium>=4.0.0",
  "webdriver-manager>=4.0.0"
]

[project.scripts]
mcp_metal_price = "src.mcp_metal_price.server:main"

[project.urls]
Source = "https://github.com/isdaniel/mcp-metal-price"
